--- a/css/less/components/_footer.less
+++ b/css/less/components/_footer.less
@@ -1,6 +1,8 @@
 footer {
+  .border;
+
   > div {
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 2fr 1fr 1fr;
 
     //Medium
     @media screen and (max-width: 768px) {
