--- a/css/less/components/_global.less
+++ b/css/less/components/_global.less
@@ -127,3 +127,23 @@ a {
     display: none;
   }
 }
+
+#copyrights {
+  padding: 15px;
+}
+
+.pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 10px 0;
+  
+  span {
+    color: white;
+    border-radius: 5px;
+    background-color: @pink;
+    padding: 5px 10px;
+    margin: 5px;
+  }
+}
